# bonsai-local

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml  test.yml
dockerfiles/: cuda.Dockerfile  default.Dockerfile
src/: error.rs  lib.rs  main.rs  prover.rs  routes.rs  state.rs  url_resolver.rs  version.rs
