[package]
name        = "bonsai-local"
description = "A local HTTP REST API server compatible with RISC Zero's Bonsai prover interface."
edition     = "2021"
license     = "Apache-2.0"

[package.metadata.release]
release = false

[dependencies]
anyhow                             = { version = "1.0" }
axum                               = { version = "0.7", features = ["macros"] }
bincode                            = { version = "1.3" }
bonsai-sdk                         = { version = "1.2.6", default-features = false }
clap                               = { version = "4.5", features = ["derive"] }
hex                                = { version = "0.4" }
risc0-zkvm                         = { version = "1.2.6", features = ["client", "prove"] }
serde_json                         = { version = "1.0" }
thiserror                          = { version = "1.0" }
tokio                              = { version = "1", features = ["full", "sync"] }
tower-http                         = { version = "0.5", features = ["trace"] }
url                                = { version = "2.5" }
uuid                               = { version = "1.4", features = ["v4", "serde"] }
tracing                            = { version = "0.1" }
tracing-subscriber                 = { version = "0.3", features = ["env-filter"] }
opentelemetry                      = { version = "0.29.0", default-features = false, features = ["trace"] }
opentelemetry_sdk                  = { version = "0.29.0", default-features = false, features = ["trace"] }
opentelemetry-otlp                 = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.29.0", features = ["semconv_experimental"] }
tracing-opentelemetry              = { version = "0.30.0" }

[dev-dependencies]
bonsai-sdk = { version = "1.2.6", features = ["non_blocking"] }

[features]
default = []
cuda    = ["risc0-zkvm/cuda"]
metal   = ["risc0-zkvm/metal"]
